2017-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/uil.c (WriteUILImage): Fix crash in UIL writer when
	writing image containing transparency.  Issue was reported by
	LCatro via email on 18 Jul 2017.

	* coders/wpg.c (InsertRow): Fix crash which occurs if image is not
	PseudoClass but a PseudoColor scanline is needed.  Resolves
	SourceForge issue #449 "Null pointer dereference in InsertRow()".

	* coders/rle.c (ReadRLEImage): Impose image dimension limits
	according to Utah RLE specification. Cap number of planes handled
	internally at 4.  Remove non-standard multi-frame extension, which
	did not work anyway.

2017-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadJNGImage): Complete fixing CVE-2017-8350 crash
	while reading a malformed JNG file.

	* coders/{html.c, map.c, plasma.c, png.c, psd.c, rle.c, stegano.c,
	uil.c}: Downgrade claimed coder stability level for HTML, SHTML,
	MAP, FRACTAL, PLASMA, JNG, MNG, RLE, STEGANO, and UIL formats.

2017-09-08  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadJNGImage): More efforts toward fixing
	CVE-2017-8350 while reading a malformed JNG file.

2017-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/error.c (ThrowLoggedException): Capture the first
	exception at ErrorException level or greater, or only capture
	exception if it is more severe than an already reported exception.
	This should help lead to better error reports since the first
	error is usually the most significant.

	* coders/png.c (ReadJNGImage): Add "improper header" exception
	reporting.

2017-09-01  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadJNGImage): Efforts toward fixing CVE-2017-8350
	while reading a malformed JNG file.

2017-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): Patch submitted by Petr Gajdos to
	check that .Width and .Height are greater than zero before they