@@ -1,5 +1,9 @@
 2017-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/render.c (DrawImage): Fix SourceForge issue #448 "Heap
+	out of bounds read in DrawDashPolygon()".  Problem was reported by
+	Kamil Frankowicz on August 28, 2017.
+
 	* coders/uil.c (WriteUILImage): Fix crash in UIL writer when
 	writing image containing transparency.  Issue was reported by
 	LCatro via email on 18 Jul 2017.
